Actualizar .gitignore para ignorar config y config.json

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,5 @@ venv.bak/
 dbfs/
 
 # Archivos de configuración
-config/config.json
-
-notebooks/ccloud-python-client.zip
-notebooks/ccloud-python-client/*
+config/
+config.json
